tests/parsing/smtlib/poly/errors/175_par_underscore.psmt2
(set-logic ALL)
(assert (par (X) _ ))
